examples/invalid/semanticErr/for/falsErr.wacc
# for condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  for (int x = 1, fals, x = x + 1)
    skip
  done
end